# biblioteca_ptm

./: README.md  biblioteca.db  pyproject.toml
core/: settings.py  urls.py
leitor/: models.py  urls.py  views.py
leitor/migrations/: 0001_initial.py
livro/: admin.py  models.py  urls.py  views.py
livro/migrations/: 0001_initial.py
relatorios/: views.py
templates/static/auth/: auth.css  login.js
templates/static/landing/: style.css
usuario/: admin.py  models.py  urls.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_nivel_acesso.py
usuario/templates/: dashboard.html  edi_senha.html  landing.html  login.html  recuperacao2.html
