[project]
name = "biblioteca-tpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "django>=6.0.4",
    "django-crispy-forms>=2.6",
    "fpdf>=1.7.2",
    "mysqlclient>=2.2.8",
    "pillow>=12.2.0",
    "pymysql>=1.1.3",
    "python-decouple>=3.8",
    "reportlib>=3.4.0",
]
